SonarCloud fix: java:S2386 Mutable fields should not be public static